--- a/tsconfig.json
+++ b/tsconfig.json
@@ -4,8 +4,7 @@
     "outDir": "dist",
     "sourceMap": true,
     "experimentalDecorators": true,
-    "emitDecoratorMetadata": true,
     "strictNullChecks": true
   },
-  "include": ["src"]
+  "include": ["src", "hello.js"]
 }
